<resources>
    <string name="app_name">Toza</string>
    <string name="click_back_to_exit">Click back to exit</string>
    <string name="msg_please_wait">Please wait..</string>

    <!--****************************** error messages *************************************-->
    <string name="error_message_unable_logout">Unable to logout</string>
    <string name="error_message_unable_message">Message module is not working</string>
    <string name="error_message_unable_address_add">Unable to add address</string>
    <string name="error_message_unable_update_user_profile">Unable to update user profile</string>
    <string name="error_message_unable_calendar">Unable to update Calendar</string>
    <string name="error_message_unable_schedule">Unable to update schedule</string>
    <string name="error_message_unable_address_get">Unable to get addresses</string>
    <string name="error_message_unable_passenger_add">Unable to add Passenger</string>
    <string name="error_message_unable_passenger_get">Unable to get Passengers</string>
    <!--****************************** Payment screen *************************************-->
    <string name="pay_with_paypal">Pay with paypal</string>
    <string name="pay_methods">Payment methods</string>
    <string name="permission_warninig">This application needs to allow use of</string>
    <string name="title_activity_maps">Direction</string>
    <string name="approx">Approx</string>
    <string name="zero_min">0 Min</string>

    <string name="login">LOGIN</string>
    <string name="submit">SUBMIT</string>
    <string name="update">UPDATE</string>
    <string name="transfer">TRANSFER</string>
    <string name="create_cricle">CREATE CIRCLE</string>
    <string name="request">REQUEST</string>
    <string name="close">CLOSE</string>
    <string name="new_user">NEW USER?</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="forgot_pass_heading">Recover your TOZA Password</string>
    <string name="withdraw_money">Withdraw Money</string>
    <string name="language_pref">Select Your Preferred Language</string>
    <string name="hint_username">Enter username</string>
    <string name="hint_email">Enter email address</string>
    <string name="hint_pass">Enter password</string>
    <string name="device_id">Your device Id is:</string>
    <string name="device_id2">Device Id</string>
    <string name="device_id_copy">Copied device id</string>
    <string name="new_user2">Need an account? <b>SIGN UP</b></string>
    <string name="welcome">WELCOME TO <font color="#ffffff">TOZA</font></string>

    <string name="hint_fname">Enter first name</string>
    <string name="hint_lname">Enter last name</string>
    <string name="hint_phone">Enter phone</string>
    <string name="hint_amount">Enter Amount</string>
    <string name="hint_remarks">Enter Remarks</string>
    <string name="hint_cnf_pass">Enter confirm password</string>
    <string name="hint_add">Enter address</string>
    <string name="hint_physical_add">Physical Address</string>
    <string name="hint_conf_things">Confidential Things!</string>
    <string name="hint_we_will_contact">We will contact you</string>
    <string name="hint_personal_details">Personal Details</string>
    <string name="total_bal">Total Balance</string>
    <string name="next">NEXT</string>
    <string name="receipent_mobile_number">Recipient Mobile Number</string>
    <string name="receipent_country">Recipient Country</string>
    <string name="add_money">Add Money</string>
    <string name="change_lang">Change Language</string>
    <string name="logout">Logout</string>
    <string name="receipent_state">Recipient State</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>

    <string name="icon">icon</string>
    <string name="counter_label_text_constructor" formatted="false">%s%s%s%s</string>

    <string name="name_hint"><b>Name: </b> Krishna Patel </string>
    <string name="country_hint"><b>Country: </b> India </string>
    <string name="curr_bal">Current Balance</string>
    <string name="curr">Currency</string>
    <string name="with_amt">Withdrawal Amount</string>
    <string name="amount">Amount</string>
    <string name="comm_chrg">Commission Charge</string>
    <string name="transfer_amt">Transfer Amount</string>
    <string name="rcpt_rcv">Recipient Receive (1$ = 1EUR)</string>
    <string name="payable_amt">Payable Amount (1$ = 1EUR)</string>
    <string name="total_payable_amt">Total Payable Amount (1$ = 1EUR)</string>
    <string name="rate"><b>Rate: </b>$1 = 1EUR</string>
    <string name="transcation_charge"><b>Transcation Charge: </b>$1</string>
    <string name="commission_charge"><b>Commission Charge: </b>$1</string>
    <string name="euro">&#8364;</string>
    <string name="sent">SENT</string>
    <string name="show_front">Show Front</string>
    <string name="show_back">Show Back</string>
    <string name="recvd">RECEIVED</string>
    <string name="add_new_card">ADD NEW CARD</string>
    <string name="top_up_wallet">TOPUP WALLET</string>
    <string name="withdraw">WITHDRAW</string>
    <string name="view_history">VIEW HISTORY</string>
    <string name="ok">OK</string>
    <string name="my_circle">MY CIRCLE</string>
    <string name="create_new_circle">CREATE NEW CIRCLE</string>


    <string-array name="my_array">
        <item>India</item>
        <item>USA</item>
        <item>UK</item>
    </string-array>


    <string-array name="change_language">
        <item>English</item>
        <item>France</item>
    </string-array>

    <string-array name="currency">
        <item>USD</item>
        <item>EURO</item>
    </string-array>


    <string-array name="cycle">
        <item>1 day</item>
        <item>2 days</item>
        <item>3 days</item>
        <item>4 days</item>
        <item>5 days</item>
        <item>6 days</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>

    <string-array name="bank_name">
        <item>SBI</item>
    </string-array>
    <string-array name="cooling">
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>

    <string-array name="participant">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>

    </string-array>
</resources>
