<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/testbg"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.RegisterActivity">
<ScrollView
    android:layout_above="@+id/txtSubmit"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <com.github.florent37.shapeofview.shapes.ArcView
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_180"
        android:elevation="4dp"
        app:shape_arc_cropDirection="outside"
        app:shape_arc_height="30dp"
        app:shape_arc_position="bottom">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
           android:src="@drawable/img3"
           android:scaleType="centerCrop"
           android:layout_width="match_parent"
           android:layout_height="match_parent" />
            <ImageView
                android:tint="@color/black"
                android:id="@+id/imgBack"
                android:tintMode="src_atop"
                android:layout_margin="@dimen/height_15"
                android:src="@drawable/ic_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </FrameLayout>
</com.github.florent37.shapeofview.shapes.ArcView>



<android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        card_view:cardBackgroundColor="#dfffffff"
        android:layout_gravity="center"
        android:layout_margin="@dimen/padding_15"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardCornerRadius="4dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <com.app.toza.custom.TfTextView
        android:layout_marginTop="@dimen/padding_8"
        android:textSize="@dimen/text_size_16"
        android:layout_marginLeft="@dimen/padding_15"
        android:layout_gravity="left"
        android:textColor="@color/grey1"
        app:isBold="true"
        android:text="@string/hint_personal_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <com.app.toza.custom.TfEditText
        android:layout_margin="@dimen/padding_15"
        android:lines="1"
        android:textColor="@color/colorPrimaryDark"
        android:hint="@string/hint_fname"
        android:gravity="center"
        android:inputType="text"
        android:id="@+id/etFirstName"
        android:padding="@dimen/padding_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <com.app.toza.custom.TfEditText
        android:layout_margin="@dimen/padding_15"
        android:lines="1"
        android:textColor="@color/colorPrimaryDark"
        android:hint="@string/hint_lname"
        android:gravity="center"
        android:inputType="text"
        android:id="@+id/etLastName"
        android:padding="@dimen/padding_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <com.app.toza.custom.TfTextView
        android:layout_marginTop="@dimen/padding_8"
        android:textSize="@dimen/text_size_16"
        android:layout_marginLeft="@dimen/padding_15"
        android:layout_gravity="left"
        android:textColor="@color/grey1"
        app:isBold="true"
        android:text="@string/hint_we_will_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.app.toza.custom.TfTextView
            android:textColor="#000"
            android:id="@+id/txtPhone"
            android:textSize="@dimen/padding_20"
            android:layout_marginLeft="@dimen/padding_15"
            android:layout_gravity="center"
            android:text="+221"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <com.app.toza.custom.TfEditText
            android:layout_margin="@dimen/padding_15"
            android:lines="1"
            android:textColor="@color/colorPrimaryDark"
            android:hint="@string/hint_phone"
            android:gravity="center"
            android:inputType="number"
            android:id="@+id/etPhone"
            android:padding="@dimen/padding_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <com.app.toza.custom.TfEditText
        android:layout_margin="@dimen/padding_15"
        android:lines="1"
        android:textColor="@color/colorPrimaryDark"
        android:hint="@string/hint_email"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:id="@+id/etEmail"
        android:padding="@dimen/padding_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <com.app.toza.custom.TfTextView
        android:layout_marginTop="@dimen/padding_8"
        android:textSize="@dimen/text_size_16"
        android:layout_marginLeft="@dimen/padding_15"
        android:layout_gravity="left"
        android:textColor="@color/grey1"
        app:isBold="true"
        android:text="@string/hint_conf_things"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <com.app.toza.custom.TfEditText
        android:layout_margin="@dimen/padding_15"
        android:lines="1"
        android:textColor="@color/colorPrimaryDark"
        android:hint="@string/hint_pass"
        android:gravity="center"
        android:inputType="textPassword"
        android:id="@+id/etPassword"
        android:padding="@dimen/padding_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.app.toza.custom.TfEditText
        android:layout_margin="@dimen/padding_15"
        android:lines="1"
        android:textColor="@color/colorPrimaryDark"
        android:hint="@string/hint_cnf_pass"
        android:gravity="center"
        android:inputType="textPassword"
        android:id="@+id/etConfirmPassword"
        android:padding="@dimen/padding_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.app.toza.custom.TfTextView
        android:layout_marginTop="@dimen/padding_8"
        android:textSize="@dimen/text_size_16"
        android:layout_marginLeft="@dimen/padding_15"
        android:layout_gravity="left"
        android:textColor="@color/grey1"
        app:isBold="true"
        android:text="@string/hint_physical_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <com.app.toza.custom.TfEditText
        android:layout_margin="@dimen/padding_15"
        android:lines="3"
        android:maxLines="3"
        android:textColor="@color/colorPrimaryDark"
        android:hint="@string/hint_add"
        android:gravity="center"
        android:inputType="text"
        android:id="@+id/etAddress"
        android:padding="@dimen/padding_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
</ScrollView>

    <com.app.toza.custom.TfTextView
        android:layout_alignParentBottom="true"
        android:lines="1"
        android:text="@string/submit"
        app:isBold="true"
        android:textColor="#fff"
        android:textSize="@dimen/text_size_18"
        android:gravity="center"
        android:id="@+id/txtSubmit"
        android:padding="@dimen/padding_15"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</RelativeLayout>