<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <ImageView
        android:id="@+id/topImage"
        android:layout_alignParentTop="true"
        android:padding="@dimen/padding_40"
        android:src="@drawable/flat_banner_transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

<LinearLayout
    android:layout_marginTop="@dimen/padding_30"
    android:layout_below="@+id/topImage"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_weight="1.5"
    android:layout_margin="@dimen/padding_8"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.app.toza.custom.TfEditText
        android:lines="1"
        android:textColor="@color/colorPrimaryDark"
        android:hint="@string/hint_username"
        android:gravity="center"
        android:inputType="text"
        android:id="@+id/etUserName"
        android:padding="@dimen/padding_10"
        android:background="@drawable/edit_textcorner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.app.toza.custom.TfEditText
        android:layout_marginTop="@dimen/padding_12"
        android:lines="1"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"
        android:hint="@string/hint_pass"
        android:inputType="textPassword"
        android:id="@+id/etPassword"
        android:padding="@dimen/padding_10"
        android:background="@drawable/edit_textcorner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>

<RelativeLayout
    android:layout_weight="1"
    android:layout_alignParentBottom="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_marginTop="@dimen/height_20"
        android:padding="@dimen/padding_8"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.app.toza.custom.TfTextView
            android:id="@+id/txtForgotPassword"
            android:layout_marginTop="@dimen/padding_40"
            android:layout_alignParentTop="true"
            android:gravity="end"
            android:textColor="#fff"
            android:text="@string/forgot_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.app.toza.custom.TfTextView
            android:layout_marginBottom="@dimen/padding_30"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:textColor="#fff"
            android:text="@string/new_user2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <com.app.toza.custom.TfTextView
        android:layout_marginRight="@dimen/padding_10"
        android:layout_marginLeft="@dimen/padding_10"
        android:lines="1"
        android:text="@string/login"
        app:isBold="true"
        android:textColor="#fff"
        android:textSize="@dimen/text_size_18"
        android:gravity="center"
        android:id="@+id/etPassword1"
        android:padding="@dimen/padding_12"
        android:background="@drawable/txt_textcorner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>

</LinearLayout>

</RelativeLayout>


    <RelativeLayout
        android:id="@+id/linear_layout_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:behavior_peekHeight="80dp"
        app:behavior_hideable="true"
        app:layout_behavior="@string/bottom_sheet_behavior"
        android:elevation="16dp"
        android:background="#fff">

        <com.app.toza.custom.TfTextView
            android:id="@+id/topHeading"
            android:layout_marginTop="@dimen/padding_8"
            android:layout_marginLeft="@dimen/padding_15"
            android:textColor="@color/colorAccent"
            app:isBold="true"
            android:textSize="@dimen/text_size_20"
            android:text="@string/forgot_pass_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <com.app.toza.custom.TfEditText
            android:layout_below="@+id/topHeading"
            android:lines="1"
            android:textColor="@color/colorPrimaryDark"
            android:hint="@string/hint_email"
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:id="@+id/etEmail"
            android:layout_marginTop="@dimen/padding_20"
            android:layout_marginLeft="@dimen/padding_15"
            android:layout_marginRight="@dimen/padding_15"
            android:padding="@dimen/padding_10"
            android:background="@drawable/edit_textcorner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
       <LinearLayout
           android:layout_marginTop="@dimen/padding_15"
           android:layout_below="@+id/etEmail"
           android:orientation="horizontal"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <com.app.toza.custom.TfTextView
               android:layout_weight="1"
               android:lines="1"
               android:text="@string/submit"
               app:isBold="true"
               android:textColor="@color/colorPrimaryDark"
               android:textSize="@dimen/text_size_16"
               android:gravity="center"
               android:id="@+id/txtSubmit"
               android:padding="@dimen/padding_12"
               android:layout_width="match_parent"
               android:layout_height="wrap_content" />

           <com.app.toza.custom.TfTextView
               android:layout_weight="1"
               android:lines="1"
               android:text="@string/close"
               app:isBold="true"
               android:textColor="@color/grey"
               android:textSize="@dimen/text_size_16"
               android:gravity="center"
               android:id="@+id/txtClose"
               android:padding="@dimen/padding_12"
               android:layout_width="match_parent"
               android:layout_height="wrap_content" />
       </LinearLayout>

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>