<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/testbg"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.RegisterActivity">

    <include
        layout="@layout/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_margin="@dimen/height_15"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.app.toza.custom.TfTextView
            android:gravity="center"
            android:textSize="@dimen/text_size_20"
            android:text="@string/forgot_pass_heading"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:layout_height="wrap_content" />

        <com.app.toza.MEditText.TextFieldBoxes
            android:layout_marginTop="@dimen/padding_30"
            android:id="@+id/text_field_boxes1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperTextColor="@color/white"
            app:primaryColor="@color/white"
            app:secondaryColor="@color/white"
            app:panelBackgroundColor="#80808080"
            app:labelText="@string/hint_email"
            app:hasFocus="false"
            app:maxCharacters="20">

            <com.app.toza.MEditText.ExtendedEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textSize="@dimen/text_size_16"
                android:maxLines="1"
                android:textColorHint="@color/white"/>

        </com.app.toza.MEditText.TextFieldBoxes>

    </LinearLayout>
    <com.app.toza.custom.TfTextView
        android:id="@+id/txtSubmit"
        android:layout_alignParentBottom="true"
        android:textSize="@dimen/text_size_18"
        android:textColor="@color/white"
        android:background="@color/colorPrimaryDark"
        android:text="@string/submit"
        android:gravity="center"
        android:padding="@dimen/padding_15"
        app:isBold="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>